<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:context=".InstructionsFragment"
       android:orientation="vertical">

       <TextView
           android:id="@+id/welcomeTitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/how_to_use_the_app"
           style="@style/text_title"
           android:layout_marginTop="@dimen/dim_32_dp" />

       <TextView
           android:id="@+id/welcomeMessage"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="@dimen/dim_16_dp"
           style="@style/text_subTitle"
           android:textAlignment="center"
           android:textColor="@color/teal_200"
           android:text="@string/instructions_info"
           android:layout_marginTop="@dimen/dim_16_dp" />

       <Button
           android:id="@+id/next_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/dim_16_dp"
           style="@style/button_style"
           android:text="@string/next"
           android:layout_gravity="center"/>

   </LinearLayout>


</layout>