<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.shoestoreinventoryapp.ShoesListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShoeDetailFragment">

        <TextView
            android:id="@+id/shoes_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_32_dp"
            style="@style/text_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/shoe_name"/>

        <EditText
            android:id="@+id/name_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_subTitle"
            tools:text="Sandals"
            android:text="@={viewModel._shoeName}"
            android:layout_marginHorizontal="@dimen/dim_32_dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoes_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/shoes_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_title"
            android:layout_marginTop="@dimen/dim_16_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_edt"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/shoe_company"/>

        <EditText
            android:id="@+id/company_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_subTitle"
            tools:text="Addidas"
            android:text="@={viewModel._shoeCompany}"
            android:layout_marginHorizontal="@dimen/dim_32_dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoes_company"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/shoes_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_title"
            android:layout_marginTop="@dimen/dim_16_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_edt"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/shoe_size"/>

        <EditText
            android:id="@+id/size_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_subTitle"
            tools:text="38"
            android:text="@={viewModel._shoeSize}"
            android:inputType="number"
            android:layout_marginHorizontal="@dimen/dim_32_dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoes_size"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/shoes_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_title"
            android:layout_marginTop="@dimen/dim_16_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/size_edt"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/shoe_description"/>

        <EditText
            android:id="@+id/description_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_subTitle"
            tools:text="Daily use"
            android:text="@={viewModel._shoeDescription}"
            android:layout_marginHorizontal="@dimen/dim_32_dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoes_description"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_32_dp"
            android:layout_marginTop="@dimen/dim_32_dp"
            android:text="@string/cancel"
            style="@style/button_style"
            app:layout_constraintEnd_toStartOf="@+id/save_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_edt" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_32_dp"
            android:text="@string/save"

            style="@style/button_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_btn"
            app:layout_constraintTop_toBottomOf="@id/description_edt" />



    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>